--- a/build.gradle
+++ b/build.gradle
@@ -38,14 +38,19 @@ dependencyManagement {
 }
 
 dependencies {
+    compileOnly "org.springframework.boot:spring-boot-configuration-processor"
     compile("org.springframework.cloud:spring-cloud-starter-gateway")
-    compile "org.codehaus.groovy:groovy-all:2.5.6"
+    compile("org.codehaus.groovy:groovy-all:2.5.6")
 
-    // indtil videre har vi ikke haft brug for disse afhængigheder
-    //compile("org.springframework.cloud:spring-cloud-starter-netflix-hystrix")
-    //compile("org.springframework.cloud:spring-cloud-starter-contract-stub-runner"){
-    //    exclude group: "org.springframework.boot", module: "spring-boot-starter-web"
-    //}
+//     indtil videre har vi ikke haft brug for disse afhængigheder
+//    compile("org.springframework.cloud:spring-cloud-starter-netflix-hystrix")
+
+    // bruges til at få wiremock i tests
+    compile("org.springframework.cloud:spring-cloud-starter-contract-stub-runner"){
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-web"
+    }
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile("org.spockframework:spock-core:1.3-groovy-2.5") // 1.3-groovy-2.5
+    testCompile("org.spockframework:spock-spring:1.3-groovy-2.5") // 1.3-groovy-2.5
 }
